# simple-stocks

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
simple_stocks/: app.py  monkeypatch.py  run_server.py  utils.py
simple_stocks/config/: __init__.py  default.py  local_example.py
simple_stocks/database/: models.py
simple_stocks/pages/: routes.py
simple_stocks/templates/: base.html  home.html
